--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="education">
         <h2>Education</h2>
-        <p>Pursuing B.Tech at [Your College Name]</p>
+        <p>Pursuing B.Tech at college of engineering Trikaripur</p>
     </section>
 
     <footer>
