--- a/index.html
+++ b/index.html
@@ -17,17 +17,75 @@
         <p>Hi! I'm Navaneeth Kesavan, a 20-year-old student currently pursuing my B.Tech. I'm passionate about AI, Data Science, and Cybersecurity. I enjoy building websites and diving into the world of code!</p>
     </section>
 
+    <section class="skills">
+        <h2>Skills</h2>
+        <div class="skill-category">
+            <h3>Programming Languages</h3>
+            <ul>
+                <li>Python</li>
+                <li>JavaScript</li>
+                <li>HTML & CSS</li>
+                </ul>
+        </div>
+        <div class="skill-category">
+            <h3>AI & Data Science</h3>
+            <ul>
+                <li>Machine Learning (e.g., scikit-learn, TensorFlow/Keras basics)</li>
+                <li>Data Analysis (e.g., Pandas, NumPy)</li>
+                </ul>
+        </div>
+        <div class="skill-category">
+            <h3>Cybersecurity Tools</h3>
+            <ul>
+                <li>[Tool 1]</li>
+                <li>[Tool 2]</li>
+                </ul>
+        </div>
+        <div class="skill-category">
+            <h3>Web Development</h3>
+            <ul>
+                <li>Frontend Development (HTML, CSS)</li>
+                </ul>
+        </div>
+    </section>
+
+    <section class="projects">
+        <h2>Projects</h2>
+        <div class="project-item">
+            <h3>Project Title One: [Brief, Catchy Name]</h3>
+            <p><strong>Technologies:</strong> Python, Pandas, Matplotlib</p>
+            <p>This project involved building a [type of project, e.g., data analysis tool, predictive model] to [briefly explain purpose/problem solved]. It demonstrated my ability to [highlight a skill, e.g., clean data, implement algorithms].</p>
+            <p><a href="[Link to GitHub Repo]" target="_blank">GitHub Repo</a> | <a href="[Link to Live Demo if available]" target="_blank">Live Demo</a></p>
+        </div>
+        <div class="project-item">
+            <h3>Project Title Two: [Another Project Name]</h3>
+            <p><strong>Technologies:</strong> HTML, CSS, JavaScript</p>
+            <p>Developed a [type of website/app] that [explain its function]. This project helped me hone my [specific skill, e.g., responsive design, DOM manipulation].</p>
+            <p><a href="[Link to GitHub Repo]" target="_blank">GitHub Repo</a> | <a href="[Link to Live Demo if available]" target="_blank">Live Demo</a></p>
+        </div>
+        </section>
+
+    <section class="education">
+        <h2>Education</h2>
+        <p>Pursuing B.Tech at College of Engineering Trikaripur</p>
+        </section>
+
     <section class="hobbies">
         <h2>Hobbies</h2>
         <ul>
             <li>💻 Coding</li>
             <li>🌐 Website Creation</li>
-        </ul>
+            </ul>
     </section>
 
-    <section class="education">
-        <h2>Education</h2>
-        <p>Pursuing B.Tech at college of engineering Trikaripur</p>
+    <section class="contact">
+        <h2>Connect With Me</h2>
+        <p>Feel free to reach out!</p>
+        <ul>
+            <li>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></li>
+            <li>LinkedIn: <a href="[Your LinkedIn Profile URL]" target="_blank">Navaneeth Kesavan K P</a></li>
+            <li>GitHub: <a href="[Your GitHub Profile URL]" target="_blank">YourGitHubUsername</a></li>
+            </ul>
     </section>
 
     <footer>
