--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <div class="profile-image-container">
+            <img src="profile.jpg" alt="Navaneeth Kesavan K P Profile Picture">
+        </div>
         <h1>Navaneeth Kesavan K P</h1>
         <p>Aspiring AI & Cybersecurity Enthusiast</p>
     </header>
@@ -25,27 +28,27 @@
                 <li>Python</li>
                 <li>JavaScript</li>
                 <li>HTML & CSS</li>
-                </ul>
+            </ul>
         </div>
         <div class="skill-category">
             <h3>AI & Data Science</h3>
             <ul>
                 <li>Machine Learning (e.g., scikit-learn, TensorFlow/Keras basics)</li>
                 <li>Data Analysis (e.g., Pandas, NumPy)</li>
-                </ul>
+            </ul>
         </div>
         <div class="skill-category">
             <h3>Cybersecurity Tools</h3>
             <ul>
                 <li>[Tool 1]</li>
                 <li>[Tool 2]</li>
-                </ul>
+            </ul>
         </div>
         <div class="skill-category">
             <h3>Web Development</h3>
             <ul>
                 <li>Frontend Development (HTML, CSS)</li>
-                </ul>
+            </ul>
         </div>
     </section>
 
@@ -63,19 +66,19 @@
             <p>Developed a [type of website/app] that [explain its function]. This project helped me hone my [specific skill, e.g., responsive design, DOM manipulation].</p>
             <p><a href="[Link to GitHub Repo]" target="_blank">GitHub Repo</a> | <a href="[Link to Live Demo if available]" target="_blank">Live Demo</a></p>
         </div>
-        </section>
+    </section>
 
     <section class="education">
         <h2>Education</h2>
         <p>Pursuing B.Tech at College of Engineering Trikaripur</p>
-        </section>
+    </section>
 
     <section class="hobbies">
         <h2>Hobbies</h2>
         <ul>
             <li>💻 Coding</li>
             <li>🌐 Website Creation</li>
-            </ul>
+        </ul>
     </section>
 
     <section class="contact">
@@ -85,7 +88,7 @@
             <li>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></li>
             <li>LinkedIn: <a href="[Your LinkedIn Profile URL]" target="_blank">Navaneeth Kesavan K P</a></li>
             <li>GitHub: <a href="[Your GitHub Profile URL]" target="_blank">YourGitHubUsername</a></li>
-            </ul>
+        </ul>
     </section>
 
     <footer>
