--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,33 +39,10 @@
             </ul>
         </div>
         <div class="skill-category">
-            <h3>Cybersecurity Tools</h3>
-            <ul>
-                <li>[Tool 1]</li>
-                <li>[Tool 2]</li>
-            </ul>
-        </div>
-        <div class="skill-category">
             <h3>Web Development</h3>
             <ul>
                 <li>Frontend Development (HTML, CSS)</li>
             </ul>
-        </div>
-    </section>
-
-    <section class="projects">
-        <h2>Projects</h2>
-        <div class="project-item">
-            <h3>Project Title One: [Brief, Catchy Name]</h3>
-            <p><strong>Technologies:</strong> Python, Pandas, Matplotlib</p>
-            <p>This project involved building a [type of project, e.g., data analysis tool, predictive model] to [briefly explain purpose/problem solved]. It demonstrated my ability to [highlight a skill, e.g., clean data, implement algorithms].</p>
-            <p><a href="[Link to GitHub Repo]" target="_blank">GitHub Repo</a> | <a href="[Link to Live Demo if available]" target="_blank">Live Demo</a></p>
-        </div>
-        <div class="project-item">
-            <h3>Project Title Two: [Another Project Name]</h3>
-            <p><strong>Technologies:</strong> HTML, CSS, JavaScript</p>
-            <p>Developed a [type of website/app] that [explain its function]. This project helped me hone my [specific skill, e.g., responsive design, DOM manipulation].</p>
-            <p><a href="[Link to GitHub Repo]" target="_blank">GitHub Repo</a> | <a href="[Link to Live Demo if available]" target="_blank">Live Demo</a></p>
         </div>
     </section>
 
@@ -96,3 +74,4 @@
     </footer>
 </body>
 </html>
+```
