--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -59,6 +58,36 @@
         </ul>
     </section>
 
+    <section id="color-cycle" class="color-cycle-section">
+        <h2>Customize Colors</h2>
+        <div class="color-options">
+            <div class="color-option">
+                <label for="bgColor">Background:</label>
+                <input type="color" id="bgColor" value="#f4f4f4">
+            </div>
+            <div class="color-option">
+                <label for="textColor">Text:</label>
+                <input type="color" id="textColor" value="#333333">
+            </div>
+            <div class="color-option">
+                <label for="accentColor">Accent:</label>
+                <input type="color" id="accentColor" value="#3498db">
+            </div>
+            <div class="color-option">
+                <label for="headerFooterBgColor">Header/Footer Background:</label>
+                <input type="color" id="headerFooterBgColor" value="#2c3e50">
+            </div>
+            <div class="color-option">
+                <label for="waveColor">Wave Color:</label>
+                <input type="color" id="waveColor" value="#ffffff">
+            </div>
+             <div class="color-option">
+                <label for="starColor">Star Color:</label>
+                <input type="color" id="starColor" value="#ffffff">
+            </div>
+        </div>
+    </section>
+
     <section class="contact">
         <h2>Connect With Me</h2>
         <p>Feel free to reach out!</p>
@@ -72,6 +101,7 @@
     <footer>
         <p>© 2025 Navaneeth Kesavan K P</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
-```
